<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10sp"
    android:paddingTop="10sp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingRight="3sp">

        <ImageView
            android:id="@+id/fitness_type_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/icon_running"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="5dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:theme="@style/AppTheme.ListFitnessDateLabel"
                android:id="@+id/fitness_date"
                android:text="@string/list_fitness_default_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:theme="@style/AppTheme.ListFitnessDataLabel"
                    android:id="@+id/fitness_distance"
                    android:text="@string/list_fitness_default_distance"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lbl_fitness_distance"
                    android:theme="@style/AppTheme.ListFitnessDescriptionLabel"
                    android:text="@string/list_fitness_distance_lbl"/>


            </LinearLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/fitness_duration"
                    android:theme="@style/AppTheme.ListFitnessDataLabel"
                    android:text="@string/list_fitness_default_duration"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lbl_fitness_duration"
                    android:theme="@style/AppTheme.ListFitnessDescriptionLabel"
                    android:text="@string/list_fitness_duration_lbl"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/fitness_average"
                    android:theme="@style/AppTheme.ListFitnessDataLabel"
                    android:text="@string/list_fitness_default_average"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lbl_fitness_average"
                    android:theme="@style/AppTheme.ListFitnessDescriptionLabel"
                    android:text="@string/list_fitness_average_lbl"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>