<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle|beginning|end"
    android:dividerPadding="5dp"
    android:divider="?android:attr/dividerHorizontal">

    <Button
        android:id="@+id/stats_filter_swimming"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAllCaps="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/filter_button_swimming"/>

    <Button
        android:id="@+id/stats_filter_running"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAllCaps="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/filter_button_running"/>

    <Button
        android:id="@+id/stats_filter_biking"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAllCaps="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/filter_button_biking"/>

</LinearLayout>