<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_filter_button_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:showDividers="middle|beginning|end"
        android:dividerPadding="5dp"
        android:visibility="gone"
        android:divider="?android:attr/dividerHorizontal">

        <ToggleButton
            android:id="@+id/filter_swimming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@android:color/transparent"
            android:textAllCaps="true"
            android:textOn="@string/filter_button_swimming"
            android:textOff="@string/filter_button_swimming"/>

        <ToggleButton
            android:id="@+id/filter_running"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@android:color/transparent"
            android:textAllCaps="true"
            android:textOn="@string/filter_button_running"
            android:textOff="@string/filter_button_running"/>

        <ToggleButton
            android:id="@+id/filter_biking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@android:color/transparent"
            android:textAllCaps="true"
            android:textOn="@string/filter_button_biking"
            android:textOff="@string/filter_button_biking"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sort_button_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:showDividers="middle|beginning|end"
        android:dividerPadding="5dp"
        android:visibility="gone"
        android:divider="?android:attr/dividerHorizontal">


    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/sort_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:text="@string/sort_button_date"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:layout_marginRight="3dp"
                android:id="@+id/sort_date_icon"
                android:src="@android:drawable/arrow_down_float"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/sort_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:text="@string/sort_button_distance"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:layout_marginRight="3dp"
                android:id="@+id/sort_distance_icon"
                android:src="@android:drawable/arrow_down_float"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/sort_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:text="@string/sort_button_duration"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:layout_marginRight="3dp"
                android:id="@+id/sort_duration_icon"
                android:src="@android:drawable/arrow_down_float"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/sort_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:text="@string/sort_button_average"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:layout_marginRight="3dp"
                android:id="@+id/sort_average_icon"
                android:src="@android:drawable/arrow_down_float"/>
        </RelativeLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/list_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
    </ListView>

</LinearLayout>