<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.punisher.fitnesstracker.dialog.ActivityDurationFragment">

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/unit_hour"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <NumberPicker
                        android:id="@+id/act_duration_np_hour_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>

                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/unit_min"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <NumberPicker
                        android:id="@+id/act_duration_np_min_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <NumberPicker
                        android:id="@+id/act_duration_np_min_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />


                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/unit_sec"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/act_duration_np_sec_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <NumberPicker
                    android:id="@+id/act_duration_np_sec_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
